refresh request copy
